--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input
           type="text"
           name="name"
+          id="new-name"
           value=""
           placeholder="Enter a toy's name..."
           class="input-text"
@@ -28,6 +29,7 @@
         <input
           type="text"
           name="image"
+          id="new-image"
           value=""
           placeholder="Enter a toy's image URL..."
           class="input-text"
